# bp-db_magic

./: .hg_archival.txt  readme.rst  setup.cfg  setup.py
db_magic/: __init__.py
