[sdist]
formats=gztar

[bdist_wheel]
universal=1

[metadata]
name = bp-db-magic
version      = attr: db_magic.__version__
description = Several helpers for sqlalchemy
;long-description = file: readme.rst
url = https://github.com/blindpandas/bp-db_magic
author       = Blind Pandas Team (original: Christopher Toth<q@q-continuum.net>)
author-email = info@blindpandas.com
license      = MIT
keywords     = db sa sqlite3
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Operating System :: OS Independent
  License :: OSI Approved :: MIT License
  Topic :: Software Development :: Libraries
  Natural Language :: English
  Programming Language :: Python :: 3

[options]
zip_safe = false
packages = find:
install_requires =
    sqlalchemy<=1.4

[options.packages.find]
where=.
